--- a/config/deployment-skywalking.yaml
+++ b/config/deployment-skywalking.yaml
@@ -51,10 +51,9 @@ spec:
             - '--ep-duration=0' # the default latency used for handling requests to / (echo handler)
             - '--ep-errors=0' # the default percentage of errors injected when handling echo requests
             - '--ep-headers=0' # the default percentage of double headers injected when handling echo requests
-            - '--observability-instrumenter=zipkin' # the instrumenter to use, valid values are zipkin, skywalking
-            - '--zipkin-reporter-endpoint=${ZIPKIN_ENDPOINT}'
-            - '--zipkin-sample-rate=${ZIPKIN_SAMPLE_RATE}' # When we originate client request, this is the sample rate we use.
-            - '--zipkin-singlehost-spans' # Envoy does not work well with Zipkin's default shared spans
+            - '--observability-instrumenter=skywalking' # the instrumenter to use, valid values are zipkin, skywalking
+            - '--skywalking-reporter-endpoint=${SKYWALKING_ENDPOINT}'
+            - '--skywalking-sample-rate=${SKYWALKING_SAMPLE_RATE}' # When we originate client request, this is the sample rate we use.
           env:
             - name: SVCNAME
               value: ${SVCNAME}
